# Radikant-JSON-C

./: .gitignore  .radikant_pkg  CMakeLists.txt  README.md  Radikant-JsonConfig.cmake.in
SRC/: rjson.c
cmake/: Config.cmake.in  RadikantJSONConfigVersion.cmake  RadikantJsonTargets.cmake
include/: radikant-json.h  rjson.h
test/: CMakeLists.txt  test_json_decoding.c  test_json_decoding_edge.c  test_json_encoding_edge.c
